--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,6 +17,10 @@ body {
     padding-top: 10px;
 }
 
+#username_tag {
+    margin-bottom: 10px;
+}
+
 h1 {
     font-size: 50px;
     line-height: 50px;
